Fixing alignment of elements. Retyped description.

--- a/style.css
+++ b/style.css
@@ -1,55 +1,24 @@
 * {
-   box-sizing: border-box; 
-   padding: 0;
-   margin: 0;
-   scroll-behavior: smooth;
-
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    scroll-behavior: smooth;
 }
 
 :root {
     --font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    --light: #fff;
-    --dark: rgb(110, 110, 110); 
 }
 
-body{
+body {
     font-family: var(--font);
-    background-image: linear-gradient(to top, #ffdd83, #ffc583, #ffae91, #ff9ba8, #ff91c1, #fd90d1, #f690e3, #ea93f6, #da97fb, #c99afd, #b89dff, #a7a0ff);
+    background-image: linear-gradient(to top, #ffecb9, #ffdbb1, #fdc6b1, #fdbcc4, #fcb9d6, #fabde1, #f8b8ec, #f3bdfa, #e6bcfc, #dbc2f8, #cdbcf8, #bab6f8);
     margin: 0;
     min-height: 100vh;
     scroll-behavior: smooth;
-   
-  
-}
-.title{
-font-size: 30px;
-display: block;
-flex-direction: column;
-float:right;
-writing-mode: vertical-rl;
-margin-right: -45px;
-color:white
 }
 
-main{
+main {
     width: 75%;
-    
-}
-.vl {
-    border-right: thick solid #fff;
-    margin-right: -140px;
-}
-
-h1{
-text-align: left;
-color: rgb(255, 173, 186);
-display: flex;
-gap: 20px;
-margin-top:-10px;
-margin-left: 25px;
-font-size: 200%;
-font-family: 'Courier New', Courier, monospace;
-
 }
 
 nav ul {
@@ -65,34 +34,41 @@ nav ul {
     position: sticky;
     font-size: 25px;
     font-family: 'Courier New', Courier, monospace;
-    
-    
-
 }
 
 a:link {
     color: rgb(255, 255, 255);
     text-decoration: none;
-  }
-  
-  a:visited {
+}
+
+a:visited {
     color: rgb(255, 255, 255);
     text-decoration: none;
-  }
-  
-  a:hover {
+}
+
+a:hover {
     text-decoration: underline;
-  }
-  
-  a:active {
+}
+
+a:active {
     color: rgb(255, 182, 113);
     text-decoration: none;
-  } 
+}
 
-h2 {
-    text-align: right;
-    margin-right: -200px;
-    margin-top: 60px
+.card {
+    margin-left: 20px;
+    position: fixed;
+}
+
+h1 {
+    text-align: left;
+    color: rgb(255, 255, 255);
+    display: flex;
+    gap: 20px;
+    margin-top: -10px;
+    margin-left: 25px;
+    font-size: 200%;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .profile-pic {
@@ -102,97 +78,143 @@ h2 {
     margin: 20px;
 }
 
-.card {
-margin-left: 20px;
-position:fixed;
+h2 {
+    text-align: right;
+    margin-right: -200px;
+    margin-top: 60px
+}
 
+div .transbox {
+    margin: 30px 30px 30px 30px;
+    background-color: #ffffff;
+    border: 1px solid black;
+    opacity: 0.6;
 }
 
 .description {
-margin-left: 400px;
-margin-top: 60px;
-margin-right: 50px;
-font-size: 20px;
-line-height: 1.3;
-align-content: center;
-display: block;
-overflow-wrap: break-word;
-color: #fff;
-}
-
-
-.socials{
-    display: flex;
-    flex-direction: row;
-    -webkit-box-align: center;
-    align-items: center;
-    margin: 0px;
-    padding: 0px;
-    list-style: none;
-}
-
-footer {
-    text-align: center;
-}
-#refactor {
-    width: 800px;
-    height: 350px;
-    margin-left: 400px;
+    margin-left: 395px;
     margin-top: 60px;
+    margin-right: 10px;
+    font-size: 20px;
+    line-height: 1.3;
+    align-content: center;
+    display: block;
+    overflow-wrap: break-word;
+    color: #fff;
+    background-color: rgb(0, 0, 0);
     opacity: 0.5;
-    border: 5px solid rgb(255, 192, 55);
-
+    padding: 10px;
 }
-#refactor:hover {
+
+.description:hover {
     opacity: 1;
-    z-index: 2;
 }
 
-.work-image {
+#work {
+    margin-left: 410px;
+    margin-top: 100px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.image {
     width: 400px;
     height: 175px;
-    margin-left: 400px;
     margin-top: 60px;
     opacity: 0.6;
     border: 5px solid rgb(255, 192, 55);
- 
+    padding: 0px;
+    justify-content: space-between;
 }
-.work-image:hover {
+
+#work img:hover {
     opacity: 1;
     z-index: 2;
 }
-.container {
-    position: relative;
-    text-align: center;
+
+#refactor {
+    width: 100%;
+    border: 5px solid rgb(255, 192, 55);
     color: white;
-    display:flex;
-    flex-direction: row;
-    flex-wrap: wrap
-  }
-  
-  /* Bottom left text */
-  .bottom-left {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.bottom-left-refactor {
     position: absolute;
-    bottom: 35px;
-    left: 450px;
+    bottom: -120px;
     font-size: 25px;
     line-height: 1.3;
     background-color: rgb(255, 192, 55);
     padding: 10px;
     z-index: 1;
-    
-  }
+}
 
-  .socials {
-    display:flex;
+.lg-img {
+    width: 100%;
+    height: auto;
+    opacity: 0.6;
+}
+
+#refactor:hover {
+    opacity: 1;
+    z-index: 2;
+}
+
+.container {
+    position: relative;
+    text-align: center;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+
+/* Bottom left text */
+
+.bottom-left {
+    position: absolute;
+    bottom: 35px;
+    font-size: 25px;
+    line-height: 1.3;
+    background-color: rgb(255, 192, 55);
+    padding: 10px;
+    z-index: 1;
+}
+
+.title {
+    font-size: 30px;
+    display: block;
+    flex-direction: column;
+    float: right;
+    writing-mode: vertical-rl;
+    margin-right: -45px;
+    color: white;
+}
+
+.vl {
+    border-right: thick solid #fff;
+    margin-right: -140px;
+}
+
+.socials {
+    display: flex;
+    flex-wrap: wrap;
     list-style: none;
     justify-content: space-evenly;
     gap: 20px;
-    flex-direction: row;
     color: rgb(0, 0, 0);
-    padding-top: 100px;
-    padding-bottom:80px;
+    padding-top: 120px;
+    padding-bottom: 80px;
+    margin-top: 100px;
     font-size: 25px;
     font-family: 'Courier New', Courier, monospace;
-   margin-left: 45px;
-  }
+    margin-left: 45px;
+    text-decoration: underline;
+    line-height: 1.5px;
+}
+
+footer {
+    text-align: center;
+}
